fix fair featured link image cropping

--- a/apps/fair/stylesheets/overview.styl
+++ b/apps/fair/stylesheets/overview.styl
@@ -249,12 +249,13 @@ left-column-width = 200px
       overflow hidden
       display inline-block
       background-color #000
+      width 150px
     &:hover
       img
         opacity 0.5
     img
       display inline-block
-      width 150px
+      width 155px
     .post-text
       display inline-block
       vertical-align top
